# alpaka3-const-corret-memory

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: AddTest.cmake
include/: concepts.hpp  mem.hpp  utils.hpp  views.hpp
include/mem/: buffer.hpp  collection.hpp  container.hpp  memory.hpp
tests/: case_1_access_mutable_memory.cpp  case_2_init_const_memory.cpp  case_3_alpaka_mem_copy.cpp  case_4_copy_construct.cpp  case_5_reduce_interface_tmp_memory.cpp  case_6_Unique_Memory.cpp  case_7_return_value_concepts.cpp  view_concepts.cpp
